@@ -112,6 +112,15 @@
     (values (- w width) (- h height) width height)))
 
 
+
+;;;
+;;; Here placement: Evaluates to current position of pointer.
+;;;
+(defun here-placement (&optional (width 0) (height 0) (border-size *border-size*))
+  (with-x-pointer
+      (values x y width height)))
+
+
 ;;;
 ;;; Current child placement
 ;;;
