@@ -1,5 +1,10 @@
 2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>
 
+	* src/clfswm-placement.lisp (here-placement): Evaluates to current
+	position of pointer.
+
+2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>
+
 	* contrib/toolbar.lisp: Add an expose-mode-button-module.
 
 2012-08-19  Philippe Brochard  <pbrochard@common-lisp.net>
